--- a/quotesite/users/templates/users/login.html
+++ b/quotesite/users/templates/users/login.html
@@ -33,7 +33,10 @@
     </div>
 
     <div class="form-group mt-4 mb-1">
-                <button type="submit" class="btn btn-dark">Sign up</button>
+        <button type="submit" class="btn btn-dark">Sign up</button>
+    </div>
+    <div class="small text-center">
+        <a href="{% url 'users:password_reset' %}" class="text-center"><i>Forgot Password?</i></a>
     </div>
 </form>
 {% endblock %}
